fix problem with table breaking theme on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -150,3 +150,9 @@ footer {
     width:auto;
   }
 }
+
+/* Fix issues with table */
+table {
+  display: block;
+  overflow-x: auto;
+}
